--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "url": "https://github.com/WilliamDeckmann/api-lab/issues"
   },
   "homepage": "https://github.com/WilliamDeckmann/api-lab#readme",
-  "dependencies": {
-    "gulp-purgecss": "^4.0.3"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.43.3"
